eks/alb/overlays/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: demo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo-container
          image: nginx:1.15.4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/custom
              readOnly: true
              name: nginx-config
      volumes:
        - name: nginx-config
          configMap:
            name: demo-nginx-conf
