eks/alb/overlays/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: demo-service
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: demo-app
