eks/alb/overlays/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: dev
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: demo-service
              servicePort: 80
